--- a/style.css
+++ b/style.css
@@ -10,13 +10,12 @@ body {
     height: 2890px;
     display: flex;
     flex-direction: column;
-
 }
 #logo {
     align-items: center;
     height: 247.2px;
     width: 1450.8px;
-    margin-left: -120px;
+    margin-left:-90px;
     margin-bottom: 0px;
     margin-top: -90px;
 
@@ -56,11 +55,27 @@ body{
     flex: 1;
 }
 footer {
+    margin-top:60%;
+    background-color: #333;
+    color: #999;
+    text-align: center;
+    padding: 2px;
+    font-size: 55px;
+}
+#cfooter{
+    margin-top: 150px;
+    background-color: #333;
+    color: #999;
+    text-align: center;
+    padding: 3px;
+    font-size: 55px;
+}
+#hfooter{
     margin-top: 100%;
     background-color: #333;
     color: #999;
     text-align: center;
-    padding: 0px;
+    padding: 1px;
     font-size: 55px;
 }
 #MyChart{
@@ -81,7 +96,7 @@ footer {
     color: #333;
 }
 .about-us{
-    margin: 150 60 -300 60;
+    margin: 85 60 60 60;
     text-align: justify;
     font-size: 50px;
 }
@@ -114,9 +129,9 @@ footer {
     height: auto;
     text-align: center;
     margin: auto;
-    margin-bottom:-250px;
+    margin-bottom: 200px;
     margin-top: 100px;
-    box-shadow: 0px 0px 8px rgba(56, 56, 56, 0.1);
+    box-shadow: 8px 8px 8px 8px rgba(56, 56, 56, 0.1);
 
 }
 
@@ -175,15 +190,15 @@ footer {
 
 #qfrequency{
     margin: 50;
-    font-size: 80x;
+    font-size: 80px;
 }
 
 .accordion {
   background-color: #f1f1f1;
   color: #333;
   cursor: pointer;
-  padding: 40px;
-  width: 100%;
+  padding: 40px ;
+  width: 1380px;
   border: none;
   text-align: left;
   outline: none;
@@ -192,6 +207,7 @@ footer {
   border-radius: 50px;
   box-shadow: 0 8px 16px rgba(0,0,0,0.1);
   margin-bottom: 20px;
+  margin-right: 10px;
 }
 
     
@@ -262,77 +278,101 @@ textarea{
 #submit:hover {
     background-color: #e9d8a6;
 }
-
-.calendar{
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    width: 350px;
-    height: 255px;
-    border: 1px solid #cbcbcb;
-    border-radius: 10px;
-    padding: 10px;
-    margin: 40px auto;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
- }
-.day-of-week {
+/*Calendar*/
+h2 {
     text-align: center;
-    text-transform: uppercase;
+    margin: 60 10 30 10;
     font-weight: bold;
 }
-
-.day {
+.selectcal {
     text-align: center;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 2 5 2 5;
+    font-family: Arial, sans-serif; 
+}
+.selectcal label{
+    
+    font-size: 70px;
+    width: 100px;
+    height: 100px;
+}
+#year, #month{
+    border: 5px solid #484848e9;
+    border-radius: 50px;
+    margin: 25px;
+    padding: 25px;
+    font-size: 60px;
+
+}
+option {
+    font-size: 15px;
+}
+#butcal{
+    margin-top: 40px;
+    margin-bottom: -10px;
+    padding: 20px;
+    font-size: 60px;
+    border: 5px solid #484848e9;
+    border-radius: 50px;
+    background-color: #007bff73;;
+}
+
+.boxcal {
+    height: 1150px;
+    width: 1300px;
+    margin: 100 60 95 40;
+    border: 10px solid #484848e9;
+    border-radius: 50px;
+    background-color:#f1f1f1;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+}
+
+.calendar {
+    margin: 30 90 30 90;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-gap: 30px;
+    text-align: center;
+    max-width: 600px;
+    font-weight: bold;
+    font-size: 50px;
+}
+.day {
+    padding: 40px;
+    background-color: #e0e0e0;
+    border-radius: 50px;
     cursor: pointer;
     position: relative;
-    border-radius: 50px;
-    transition: background-color 0.2s ease;
 }
 .day:hover {
-    background-color: #d5dfff;
-    border-radius: 50px;
+    background-color: #b0b0b0;
 }
 .tooltip {
     display: none;
     position: absolute;
-    text-align: center;
-    background: #333;
-    color: #fff;
-    padding: 5px;
-    border-radius: 10px;
-    z-index: 10;
-    width: 80px;
-    top: -40px;
+    bottom: -190px;
     left: 50%;
     transform: translateX(-50%);
+    border: 10px solid #94d2bd;
+    padding: 15px;
+    border-radius: 150px;
+    font-size: 42px;
+    z-index: 10;
+    background-color:#0086a1;
 }
-.total {
+.total-box {
     text-align: center;
     background-color: #f1f1f1;
     padding: 30px;
-    margin-top: 150px;
-    margin-left: -200px;
-    border-radius: 15px;
-    width: auto;
+    margin: 80px auto;
+    border-radius: 50px;
+    width: 50%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    font-size: 20px;
+    font-size: 70px;
     color: #333;
 }
-.selector {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    text-align: center;
-    font-size: 20px;
-}
-.selector select {
-    margin-top: 20px;
-    margin-right: 10px;
-    border-radius: 10px;
-    text-align: center;
-    font-size: 20px;
+select, button {
+    padding: 10px;
+    font-size: 16px;
+    margin: 10px;
+    cursor: pointer;
 }
